crates/common/tests/ui/origin_export_key_raw_strings.stderr
error[E0277]: the trait bound `str: OriginExportOwnerKey` is not satisfied
 --> tests/ui/origin_export_key_raw_strings.rs:4:46
  |
4 |     let _ = OriginExportKey::new("semantic", "semantic:test", "expr:0");
  |             --------------------             ^^^^^^^^^^^^^^^ the trait `OriginExportOwnerKey` is not implemented for `str`
  |             |
  |             required by a bound introduced by this call
  |
note: required by a bound in `OriginExportKey::new`
 --> src/origin.rs
  |
  |     pub fn new<Owner, Local>(kind: impl AsRef<str>, owner_key: &Owner, local_key: &Local) -> Self
  |            --- required by a bound in this associated function
  |     where
  |         Owner: OriginExportOwnerKey + ?Sized,
  |                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `OriginExportKey::new`

error[E0277]: the trait bound `str: OriginExportLocalKey` is not satisfied
 --> tests/ui/origin_export_key_raw_strings.rs:4:63
  |
4 |     let _ = OriginExportKey::new("semantic", "semantic:test", "expr:0");
  |             --------------------                              ^^^^^^^^ the trait `OriginExportLocalKey` is not implemented for `str`
  |             |
  |             required by a bound introduced by this call
  |
note: required by a bound in `OriginExportKey::new`
 --> src/origin.rs
  |
  |     pub fn new<Owner, Local>(kind: impl AsRef<str>, owner_key: &Owner, local_key: &Local) -> Self
  |            --- required by a bound in this associated function
...
  |         Local: OriginExportLocalKey + ?Sized,
  |                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `OriginExportKey::new`
