crates/common/tests/ui/origin_export_key_raw_strings.rs
use fe_common::origin::OriginExportKey;

fn main() {
    let _ = OriginExportKey::new("semantic", "semantic:test", "expr:0");
}
